Updated to use postgres backend
