# swagger_server/controllers/access_controller.py
@@ -1,6 +1,8 @@
 import connexion
 import six
+from werkzeug.exceptions import BadRequest
 
+from swagger_server.database.ResourceAccess import ResourceRepository, ResourceAccessModel
 from swagger_server.models.resource_access import ResourceAccess  # noqa: E501
 from swagger_server.models.resource_ref import ResourceRef  # noqa: E501
 from swagger_server import util
@@ -20,9 +22,13 @@ def add_resource_access_for_user(body, data_type, user_id):  # noqa: E501
 
     :rtype: None
     """
-    if connexion.request.is_json:
-        body = ResourceRef.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+    if not connexion.request.is_json:
+        raise BadRequest('Only application/json supported.')
+    resource_ref = ResourceRef.from_dict(connexion.request.get_json())
+    with ResourceRepository(ResourceAccessModel) as repo:
+        for resource_id in resource_ref.ids:
+            resource_access = ResourceAccessModel(user_id, resource_id, data_type)
+            repo.save(resource_access)
 
 
 def get_resource_access_for_user(data_type, user_id):  # noqa: E501
@@ -37,4 +43,7 @@ def get_resource_access_for_user(data_type, user_id):  # noqa: E501
 
     :rtype: ResourceAccess
     """
-    return 'do some magic!'
+    with ResourceRepository(ResourceAccessModel) as repo:
+        access_list = repo.get_resource_access_for_user(user_id, data_type)
+    resource_ids = [access.resource_id for access in access_list]
+    return ResourceAccess(count=len(resource_ids), data=resource_ids)
